# image-classification-jax

./: .gitignore  README.md  pyproject.toml  requirements.txt
image_classification_jax/: run_experiment.py  run_experiment_test.py
image_classification_jax/models/: ViT.py  resnet.py
image_classification_jax/utils/: imagenet_pipeline.py  training_utils.py
