[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "image-classification-jax"
version = "0.1.4"
description = "Run image classification experiments in JAX with ViT, resnet, cifar10, cifar100, imagenette, and imagenet."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Evan Walters" },
]
keywords = [
    "python",
    "machine learning",
    "optimization",
    "jax",
]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "jax",
    "flax",
    "einops",
    "optax",
    "numpy",
    "tensorflow-cpu",
    "tensorflow-datasets",
    "wandb",
    "psgd-jax",
]

[project.urls]
homepage = "https://github.com/evanatyourservice/image-classification-jax"
repository = "https://github.com/evanatyourservice/image-classification-jax"